--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta content="telephone=no,email=no" name="format-detection">
     <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
     <title>vshop</title>
+    <link href="//cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
   </head>
   <body>
     <app></app>
